--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         uses: wlixcc/SFTP-Deploy-Action@v1.2.1
         with:
           username: connjfze
-          server: 185.61.154.216
+          server: https://connectedlearningforstem.org/
           port: 22 # default is 22
           ssh_private_key: ${{ secrets.CHEM_LAB_KEY }}
  
