--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         uses: wlixcc/SFTP-Deploy-Action@v1.2.1
         with:
           username: connjfze
-          server: connectedlearningforstem.org
-          port: 22 # default is 22
+          server: 185.61.154.216
+          port: 21098 # default is 22
           ssh_private_key: ${{ secrets.CHEM_LAB_KEY }}
  
           
